k8s/Network Policy/allow-backend-only.yaml
# ---- NetworkPolicy: DB only accepts traffic from Backend ----
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-only
  namespace: three-tier
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: backend
      ports:
        - port: 27017
          protocol: TCP
