k8s/Network Policy/backend-allow-frontend-only.yaml
# ---- NetworkPolicy: Backend accepts traffic from Frontend only ----
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-frontend-only
  namespace: three-tier
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: frontend
      ports:
        - port: 5000
          protocol: TCP
